Sharing exercise-7 for feedback

--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -9,10 +9,33 @@
   </head>
 
   <body>
-    <h1>Animals</h1>
+    <h1 class="title">Animals</h1>
     <section class="section">
-      <h2>Cute Animals</h2>
-      <!-- Complete the file... -->
+      <h2 class="subtitles">Cute Animals</h2>
+      <ul class="row-cute-animals">
+        <li class="col-cute-animals biggest">
+          <h2 class="animal-category">Cats</h2>
+          <img src="imgs/cat.jpg" alt="First cat" class="image">
+          <img src="imgs/cat2.jpeg" alt="Second cat" class="image">
+        </li>
+        <li class="col-cute-animals">
+          <h2 class="animal-category">Dogs</h2>
+          <img src="imgs/dog.jpg" alt="First dog" class="image">
+          <img src="imgs/dog2.jpg" alt="Second dog" class="image">
+        </li>
+        <li class="col-cute-animals">
+          <h2 class="animal-category">An Alpaca</h2>
+          <img src="imgs/alpaca.jpg" alt="An alpaca" class="image">
+        </li>
+      </ul>
+    </section>
+
+    <section class="section">
+      <h2 class="subtitles">Big Animals</h2>
+    </section>
+
+    <section class="section">
+      <h2 class="subtitles">Insects</h2>
     </section>
   </body>
 </html>
