--- a/workshop/exercise-7/index.html
+++ b/workshop/exercise-7/index.html
@@ -12,18 +12,18 @@
     <h1 class="title">Animals</h1>
     <section class="section">
       <h2 class="subtitles">Cute Animals</h2>
-      <ul class="row-cute-animals">
-        <li class="col-cute-animals biggest">
+      <ul class="row">
+        <li class="col">
           <h2 class="animal-category">Cats</h2>
           <img src="imgs/cat.jpg" alt="First cat" class="image">
           <img src="imgs/cat2.jpeg" alt="Second cat" class="image">
         </li>
-        <li class="col-cute-animals">
+        <li class="col">
           <h2 class="animal-category">Dogs</h2>
           <img src="imgs/dog.jpg" alt="First dog" class="image">
           <img src="imgs/dog2.jpg" alt="Second dog" class="image">
         </li>
-        <li class="col-cute-animals">
+        <li class="col">
           <h2 class="animal-category">An Alpaca</h2>
           <img src="imgs/alpaca.jpg" alt="An alpaca" class="image">
         </li>
@@ -32,10 +32,38 @@
 
     <section class="section">
       <h2 class="subtitles">Big Animals</h2>
+      <ul class="row">
+        <li class="col">
+          <h2 class="animal-category">An Elephant</h2>
+          <img src="imgs/elephant.jpg" alt="Big elephant" class="image">
+        </li>
+        <li class="col">
+          <h2 class="animal-category">A Girraffe</h2>
+          <img src="imgs/giraffe.jpg" alt="Tall girraffe" class="image">
+        </li>
+        <li class="col">
+          <h2 class="animal-category">A whale and her baby</h2>
+          <img src="imgs/whale.jpg" alt="Mommy whale and baby whale" class="image">
+        </li>
+      </ul>
     </section>
 
     <section class="section">
       <h2 class="subtitles">Insects</h2>
+      <ul class="row">
+        <li class="col">
+          <h2 class="animal-category">A Firefly</h2>
+          <img src="imgs/firefly.jpg" alt="Sparkly fly" class="image">
+        </li>
+        <li class="col">
+          <h2 class="animal-category">A Ladybug</h2>
+          <img src="imgs/ladybug.jpg" alt="Red ladybug" class="image">
+        </li>
+        <li class="col">
+          <h2 class="animal-category">A Butterfly</h2>
+          <img src="imgs/butterfly.jpg" alt="beautiful Butterfly" class="image">
+        </li>
+      </ul>
     </section>
   </body>
 </html>
